# plumage_webapi

./: CMakeLists.txt
include/plumage_webapi/: plumage_web_api.hpp
include/plumage_webapi/api/: ftp.hpp  http.hpp  json.hpp  oauth.hpp  xml.hpp
include/plumage_webapi/curl/: curl_callback.hpp  curl_data.hpp
sample/: CMakeLists.txt  sample.cpp
src/: plumage_web_api.cpp
